# wwk

zad1/: README  zad1.pml
zad2/: Main.hs  bdd.cabal  build.sh  stack.yaml
zad2/src/Data/BDD/: Tape.hs  Types.hs
zad3/: gen.ml  gennilp.ml
