name: bdd
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: Apache-2.0
license-file: LICENSE
maintainer: krzysztof.pszeniczny@gmail.com
category: Data
author: Krzysztof Pszeniczny

library
    exposed-modules:
        Data.BDD.Types
        Data.BDD.Tape
    build-depends:
        base ==4.8.*,
        vector ==0.11.*,
        hashable ==1.2.*,
        hashtables ==1.2.*,
        unordered-containers ==0.2.*,
        mtl >=2.2.1 && <2.3,
        primitive >=0.6.1.0 && <0.7,
        profunctors ==5.2.*,
        pretty >=1.1.2.0 && <1.2
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -Odph -rtsopts -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000

executable bdd
    main-is: Main.hs
    build-depends:
        base ==4.8.*,
        mtl >=2.2.1 && <2.3,
        pretty >=1.1.2.0 && <1.2,
        bdd >=0.1.0.0 && <0.2
    default-language: Haskell2010
    ghc-options: -Wall -Odph -rtsopts -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000

